Fix scrolling backgrounds on iOS

--- a/styles/base/base.scss
+++ b/styles/base/base.scss
@@ -22,8 +22,7 @@ body, html {
   /* Full height */
   height: 100%;
   /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
+  background-attachment: scroll;
   background-repeat: no-repeat;
   background-size: cover;
   &.parallax--home {
